sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:10: error: Int does not take parameters
        echange(i,i+1)
               ^AlgCocktailSort3:22: error: Int does not take parameters
        echange(j,j+1)
               ^